# sup-gui-extra

./: CMakeLists.txt  ChangeLog  README.md  pom.xml
cmake/config/: sup-gui-extra-config.cmake.in
cmake/module/: FindCODAC.cmake  configuration.cmake  installation.cmake
cmake/modules/: configuration.cmake
src/lib/: CMakeLists.txt
src/lib/coa-icons/: CMakeLists.txt  coa-icons.qrc  coa_icons.h.in
src/lib/coa-icons/icons/coa-icons/: index.theme
